refactor: Sonar cleanup, part 3 (#180)